# OpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
application/: Application.cpp  Application.h  CMakeLists.txt  assimpInstanceLoader.cpp  assimpInstanceLoader.h  assimpLoader.cpp  assimpLoader.h  frameCapture.cpp  frameCapture.h  optimizationShowcase.cpp  optimizationShowcase.h  skinnedModel.cpp  skinnedModel.h
application/camera/: camera.h  cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.h  trackBallCameraControl.cpp
assets/: grass.fbx
assets/models/: README.md
assets/models/MoonRock01/: moon_rock_01_2k.gltf
assets/models/MoonRock02/: moon_rock_02_2k.gltf
assets/models/MoonRock06/: moon_rock_06_2k.gltf
assets/shaders/: aurora.frag  aurora.vert  cube.frag  cube.vert  depth.frag  grassInstance.frag  grassInstance.vert  phong.frag  phongEnv.frag  phongInstance.frag  phongInstance.vert  phongOpacityMask.frag  screen.frag  screen.vert
assets/textures/: README.md  brown_photostudio_01_4k.exr  forest_slope_1k.exr  forest_slope_2k.exr  qwantani_night_puresky_2k.exr
docs/: AURORA_RENDERING.md  DEMO_SCRIPT.md  P0_RENDER_PIPELINE.md  SKELETAL_ANIMATION.md
glframework/: core.h  geometry.cpp  geometry.h  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h
glframework/framebuffer/: framebuffer.cpp  framebuffer.h
glframework/light/: directionalLight.cpp  directionalLight.h  light.h  pointLight.cpp  pointLight.h  spotLight.h
glframework/material/: auroraMaterial.cpp  auroraMaterial.h  cubeMaterial.cpp  cubeMaterial.h  depthMaterial.cpp  depthMaterial.h  grassInstanceMaterial.cpp  grassInstanceMaterial.h  material.h  opacityMaskMaterial.cpp  opacityMaskMaterial.h  phongEnvMaterial.cpp  phongEnvMaterial.h  phongInstanceMaterial.cpp  phongInstanceMaterial.h  screenMaterial.cpp  screenMaterial.h
glframework/mesh/: instancedMesh.cpp  instancedMesh.h  mesh.cpp  mesh.h
glframework/renderer/: frustum.cpp  frustum.h  gpuProfiler.cpp  gpuProfiler.h  renderPipeline.cpp  renderPipeline.h  renderer.cpp  renderer.h
glframework/tools/: tools.cpp  tools.h
tools/: record_showcase_4k.ps1
wrapper/: checkError.cpp  checkError.h
(+55 files in other folders)
